--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     font-family:"Lucida Console", Monaco, monospace;
-    background-image: linear-gradient(red, yellow);
+    background-image:linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
     margin:40px auto;
     max-width:80%;
     line-height:1.6;
