--- a/index.css
+++ b/index.css
@@ -8,6 +8,22 @@ body {
     padding:0 10px;
 }
 
+.button {
+  background-color: #4064ac; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 24px;
+}
+
+.button2 {background-color: #008CBA;} /* Blue */
+
 @media (max-width: 800px) {
     body {
         max-width:97%;
