--- a/index.css
+++ b/index.css
@@ -9,20 +9,16 @@ body {
 }
 
 .button {
-  background-color: #4064ac; /* Green */
-  border: none;
+  background-color: #4064ac; /* That nice UI blue */
+
   color: white;
-  padding: 15px 32px;
+  
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+
   border-radius: 24px;
 }
 
-.button2 {background-color: #008CBA;} /* Blue */
+.button2 {background-color: #5240ac;} /* Blue */
 
 @media (max-width: 800px) {
     body {
