--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ body {
 body * {
     font-family:"Lucida Console", Monaco, monospace;
     line-height:1.2;
-    color:#333;
+    color:#ffffff;
 }
 
 h1,h2,h3{line-height:1.2;}
